fixed auth token problem from hf

--- a/notebooks/alphaevolve-gemma2-it.ipynb
+++ b/notebooks/alphaevolve-gemma2-it.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e0265ec8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -14,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85ccc948",
    "metadata": {},
    "outputs": [],
@@ -27,7 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "363605ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'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'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HF_TOKEN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "11eb7937",
    "metadata": {},
    "outputs": [],
@@ -41,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "666135aa",
    "metadata": {},
    "outputs": [],
@@ -69,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "567f466a",
    "metadata": {},
    "outputs": [],
@@ -92,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "001d64fc",
    "metadata": {},
    "outputs": [],
@@ -146,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "23111355",
    "metadata": {},
    "outputs": [],
@@ -157,12 +189,15 @@
     "\n",
     "        print(f\"Loading {config.model_id}...\")\n",
     "        # Load Gemma on GPU\n",
-    "        self.tokenizer = AutoTokenizer.from_pretrained(self.config.model_id)\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(\n",
+    "            self.config.model_id, token=HF_TOKEN\n",
+    "        )\n",
     "        self.model = AutoModelForCausalLM.from_pretrained(\n",
     "            self.config.model_id,\n",
     "            device_map=\"auto\",\n",
     "            # TODO: make this a param\n",
     "            torch_dtype=torch.float16,\n",
+    "            token=HF_TOKEN,\n",
     "        )\n",
     "        self.evaluator = Evaluator()\n",
     "        self.population: List[Program] = []\n",
@@ -283,10 +318,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c4ebf2c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading google/gemma-2b-it...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a0d47fbcf6d48cca12bd39f6be462c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seeded with fitness: -inf\n",
+      "\n",
+      "--- Generation 1 ---\n",
+      "  > Mutating parent (Fitness: -inf)... Result Fitness: -2528\n",
+      "  > Mutating parent (Fitness: -inf)... Result Fitness: -11604\n",
+      "  > Mutating parent (Fitness: -inf)... Result Fitness: -inf\n",
+      "  > Mutating parent (Fitness: -inf)... Result Fitness: -inf\n",
+      "  > Mutating parent (Fitness: -inf)... Result Fitness: -11604\n",
+      "Best in Gen 1: -2528\n",
+      "\n",
+      "--- Generation 2 ---\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -2528\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -11604\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -11604\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -6848\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -9742\n",
+      "Best in Gen 2: -2528\n",
+      "\n",
+      "--- Generation 3 ---\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -2528\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -2528\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -4868\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -inf\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -inf\n",
+      "Best in Gen 3: -2528\n",
+      "\n",
+      "--- Generation 4 ---\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -43150801\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -2528\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -2528\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -2528\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -2528\n",
+      "Best in Gen 4: -2528\n",
+      "\n",
+      "--- Generation 5 ---\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -371540\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -56336\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -2528\n",
+      "  > Mutating parent (Fitness: -2528)... Result Fitness: -425124\n",
+      "Best in Gen 5: -678\n",
+      "\n",
+      "--- Generation 6 ---\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -16650\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -16650\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -16650\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "Best in Gen 6: -678\n",
+      "\n",
+      "--- Generation 7 ---\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -inf\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "Best in Gen 7: -678\n",
+      "\n",
+      "--- Generation 8 ---\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -98312694\n",
+      "Best in Gen 8: -678\n",
+      "\n",
+      "--- Generation 9 ---\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "Best in Gen 9: -678\n",
+      "\n",
+      "--- Generation 10 ---\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -inf\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -678\n",
+      "  > Mutating parent (Fitness: -678)... Result Fitness: -16650\n",
+      "Best in Gen 10: -678\n",
+      "\n",
+      "=== Final Discovered Solution ===\n",
+      "def solve(x):\n",
+      "    # Explore quadratic, cubic and quartic patterns\n",
+      "    patterns = [(x - 1)**2, (x - 1)**3, (x - 1)**4]\n",
+      "    for pattern in patterns:\n",
+      "        if pattern == (x - 1)**2:\n",
+      "            return x ** 2\n",
+      "        elif pattern == (x - 1)**3:\n",
+      "            return x ** 3\n",
+      "        elif pattern == (x - 1)**4:\n",
+      "            return x ** 4\n",
+      "    return -1\n"
+     ]
+    }
+   ],
    "source": [
     "# starting seed program\n",
     "initial_heuristic = \"\"\"\n",
@@ -304,11 +468,19 @@
     "print(\"\\n=== Final Discovered Solution ===\")\n",
     "print(agent.population[0].code)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3063f43a-861b-46dc-b023-9932c48e5db9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
