dtype instead of torch_dtype

--- a/notebooks/alphaevolve-gemma2-it.ipynb
+++ b/notebooks/alphaevolve-gemma2-it.ipynb
@@ -196,7 +196,7 @@
     "            self.config.model_id,\n",
     "            device_map=\"auto\",\n",
     "            # TODO: make this a param\n",
-    "            torch_dtype=torch.float16,\n",
+    "            dtype=torch.float16,\n",
     "            token=HF_TOKEN,\n",
     "        )\n",
     "        self.evaluator = Evaluator()\n",
