--- a/notebooks/alphaevolve-gemma2-it.ipynb
+++ b/notebooks/alphaevolve-gemma2-it.ipynb
@@ -203,14 +203,14 @@
     "        self.population: List[Program] = []\n",
     "\n",
     "    def seed_population(self, initial_code: str):\n",
-    "        \"\"\"Initialize the database with a user-provided starting point[cite: 60].\"\"\"\n",
+    "        \"\"\"Initialize the database with a user-provided starting point.\"\"\"\n",
     "        fitness = self.evaluator.evaluate(initial_code)\n",
     "        self.population.append(Program(code=initial_code, fitness=fitness))\n",
     "        print(f\"Seeded with fitness: {fitness}\")\n",
     "\n",
     "    def construct_prompt(self, parent: Program, inspirations: List[Program]) -> str:\n",
     "        \"\"\"\n",
-    "        Builds the 'Rich Context' prompt[cite: 65].\n",
+    "        Builds the 'Rich Context' prompt.\n",
     "        It includes 'Prior programs' (inspirations) and the 'Current program' (parent) to mutate.\n",
     "        \"\"\"\n",
     "\n",
