--- a/notebooks/alphaevolve-gemma2-it.ipynb
+++ b/notebooks/alphaevolve-gemma2-it.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e0265ec8",
    "metadata": {},
    "outputs": [
@@ -18,22 +18,7 @@
     }
    ],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv(override=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "85ccc948",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "HF_TOKEN = os.getenv(\"HUGGINGFACE_TOKEN\")\n",
-    "assert HF_TOKEN"
+    "from alphaevolve.secrets import values"
    ]
   },
   {
@@ -157,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "23111355",
    "metadata": {},
    "outputs": [],
@@ -169,14 +154,14 @@
     "        print(f\"Loading {config.model_id}...\")\n",
     "        # Load Gemma on GPU\n",
     "        self.tokenizer = AutoTokenizer.from_pretrained(\n",
-    "            self.config.model_id, token=HF_TOKEN\n",
+    "            self.config.model_id, token=values.huggingface_token.get_secret_value()\n",
     "        )\n",
     "        self.model = AutoModelForCausalLM.from_pretrained(\n",
     "            self.config.model_id,\n",
     "            device_map=\"auto\",\n",
     "            # TODO: make this a param\n",
     "            dtype=torch.float16,\n",
-    "            token=HF_TOKEN,\n",
+    "            token=values.huggingface_token.get_secret_value(),\n",
     "        )\n",
     "        self.evaluator = Evaluator()\n",
     "        self.population: List[Program] = []\n",
@@ -763,7 +748,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
